#15236: fix redundent scrollbars on UI (#15779)
* fix redundent scrollbars on UI

* minor optimizaion

--- a/openmetadata-ui/src/main/resources/ui/src/components/ActivityFeed/TaskFeedCard/task-feed-card.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/ActivityFeed/TaskFeedCard/task-feed-card.less
@@ -22,16 +22,3 @@
     margin-right: 4px;
   }
 }
-
-.task-feed-message {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-
-  &:hover {
-    .ant-typography {
-      color: @primary-color;
-    }
-  }
-}
